<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">appTecnico</string>
    <!-- Login -->
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="ou">-------- OU -------</string>
    <string name="cadastre_se">Cadastre-se</string>

    <!-- Cadastro -->
    <string name="nome">Nome</string>
    <string name="e_mail2">E-mail</string>
    <string name="senha2">Senha</string>
    <string name="digite_novamente_a_senha">Digite novamente a senha</string>
    <string name="voc_aceita_o_contrato_de_usu_rio">Você aceita o contrato de usuário</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="ou2">-------- OU --------</string>
    <string name="j_sou_cadastrado">Já sou cadastrado</string>
    <string name="digite_novamente_a_senha2">Digite novamente a senha</string>
    <string name="textview">TextView</string>
    <string name="graficos">gráficos</string>
    <string name="sistema_log">sistema / log</string>
    <string name="torneios">torneios</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="estatisticas">estatísticas</string>
    <string name="button">Button</string>

    <!--Combobox Spinner lista de clubes da tela de config partidas -->
    <string-array name="campeonato">
        <item><b>ESCOLHA O TORNEIO:</b></item>
        <item>Campeonato Brasileiro</item>
        <item>Copa do Brasil</item>
        <item>Campeonato Gaúcho</item>
        <item>Libertadores da América</item>
        <item>Copa São Paulo</item>
        <item>Sul-Americana</item>
        <item>Mundial de Clubes</item>
    </string-array>
    <string name="title_activity_graficos">Graficos</string>
    <string name="equipe_config">equipe</string>
    <string name="textview2">tv2</string>
    <string name="futsal">Futsal</string>
    <string name="futebol_de_campo">Futebol de Campo</string>
    <string name="action_settings">Settings</string>
    <string name="pass">+ pass</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="campo">Campo</string>
    <string name="iniciar">Iniciar</string>
    <string name="passes_errados">Passes Errados</string>
    <string name="gr_ficos_detalhados">Gráficos detalhados</string>
    <string name="atleta">ATLETA</string>
    <string name="chutes_a_gol">Chutes a gol</string>
    <string name="perdidas">Perdidas</string>
    <string name="pesquisar">pesquisar</string>
    <string name="verificar">Verificar</string>
    <string name="bolas_perdidas">Bolas perdidas</string>
    <string name="passes_errado">Passes errados</string>
    <string name="intercepta_es">Interceptações</string>
    <string name="ver">ver</string>


    <item name="spinnerJogador" type="id"></item>
    <item name="spinnerTorneio" type="id"></item>
    <item name="spinnerBloco" type="id"></item>
    <item name="spinnerJogo" type="id"></item>

    <item name="checkBoxPasses" type="id"></item>
    <item name="checkChutes" type="id"></item>
    <item name="checkBoxPerdidas" type="id"></item>
    <item name="checkBoxIntercepts" type="id"></item>

    <string name="hello_world">Hello world!</string>
    <string name="title">Coach Me</string>
    <string name="main_formations">Formations</string>
    <string name="main_directory">Player Directory</string>
    <string name="main_statistics">Game Statistics</string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_display_formations">DisplayFormationsActivity</string>
    <string name="title_activity_main2">MainActivity</string>


    <string name="refresh">Refresh</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="b_player">Black Player</string>
    <string name="r_player">Red Player</string>
    <string name="ball">Ball</string>
    <string name="back">Back</string>
    <string name="remove_icon">Remove Icon</string>


    <string name="stats_newGame">New Game</string>
    <string name="stats_home">Home</string>
    <string name="stats_home_percent">0%</string>
    <string name="stats_away">Away</string>
    <string name="stats_away_percent">0%</string>
    <string name="stats_timer">Timer</string>
    <string name="stats_posession">Possession</string>
    <string name="stats_shots">Shots</string>
    <string name="stats_goals">Goals</string>
    <string name="stats_penalties">Penalties</string>
    <string name="stats_pause">Pause</string>
    <string name="stats_play">Play</string>
    <string name="stats_zeroed">0</string>
    <string name="stats_plus">+</string>
    <string name="stats_minus">-</string>
    <string name="stats_awayrefresh">Away Refresh</string>
    <string name="stats_homerefresh">Home Refresh</string>
</resources>
